--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
   "routes": [
+    { "handle": "filesystem" },
     { "src": "/data/hubs.json", "dest": "/data/hubs.json" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
