--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,8 @@
       ]
     }
   ],
-  "routes": [
-    { "handle": "filesystem" },
-    { "src": "/data/hubs.json", "dest": "/data/hubs.json" },
-    { "src": "/(.*)", "dest": "/index.html" }
+  "rewrites": [
+    { "source": "/data/hubs.json", "destination": "/data/hubs.json" },
+    { "source": "/(.*)", "destination": "/index.html" }
   ]
 }
